--- a/player/zongplayer.html
+++ b/player/zongplayer.html
@@ -34,7 +34,8 @@
 
 Here is an example of the Zong! Player applet. All files <!-- except brandenburg5.xml, which should not be added to the website because of its size... --> are from the "set of musical examples", (c) by Recordare LLC, <a href="http://www.musicxml.org">www.musicxml.org</a>.<BR><BR>
 
-<applet code="com/xenoage/zong/player/gui/PlayerApplet.class" archive="lib/gervill.jar,lib/player.jar,lib/playerdata.jar,lib/proxymusic-2.0.jar,lib/skin.jar" width="384" height="36">
+<applet code="com/xenoage/zong/player/gui/PlayerApplet.class"
+  archive="lib/core.jar,lib/gervill.jar,lib/midi-out.jar,lib/musicxml.jar,lib/musicxml-in.jar,lib/pdlib.jar,lib/player.jar,lib/playerdata.jar,lib/skin.jar,lib/util.jar" width="384" height="36">
    <param name="bgcolor" value="FFFFFF">
    <param name="path" value="files">
    <param name="files" value="Album.mxl;SomeOpus.xml;SomeOpus2.xml;BrahWiMeSample.mxl;BeetAnGeSample.xml;Binchois.xml;BrahWiMeSample.xml;Chant.xml;DebuMandSample.xml;Dichterliebe01.xml;FaurReveSample.xml;MahlFaGe4Sample.xml;MozaChloSample.xml;MozaVeilSample.xml;MozartPianoSonata.xml;MozartTrio.xml;Saltarello.xml;SchbAvMaSample.xml;Telemann.xml"> 
