--- a/viewer/applet/zongviewer.html
+++ b/viewer/applet/zongviewer.html
@@ -5,7 +5,7 @@
 </head>
 <body style="margin:0px;overflow:hidden;">
 
-<applet code="org.jdesktop.applet.util.JNLPAppletLauncher" width="100%" height="100%" archive="http://download.java.net/media/applet-launcher/applet-launcher.jar, http://www.xenoage.com/temp/jogl-1.1.1-rc7/jogl.jar, http://download.java.net/media/gluegen/webstart/gluegen-rt.jar, lib/viewer.jar, lib/viewerdata.jar, lib/gervill.jar, lib/proxymusic-2.0.jar, lib/tablelayout.jar">
+<applet code="org.jdesktop.applet.util.JNLPAppletLauncher" width="100%" height="100%" archive="http://download.java.net/media/applet-launcher/applet-launcher.jar, http://www.xenoage.com/temp/jogl-1.1.1-rc7/jogl.jar, http://download.java.net/media/gluegen/webstart/gluegen-rt.jar, lib/core.jar,lib/gervill.jar,lib/midi-out.jar,lib/musicxml.jar,lib/musicxml-in.jar,lib/player.jar,lib/tablelayout.jar,lib/viewer.jar,lib/viewerdata.jar">
 	<param name="files" value="http://www.xenoage.com/temp/zong/files/BeetAnGeSample.xml;http://www.xenoage.com/temp/zong/files/Echigo-Jishi.xml;http://www.xenoage.com/temp/zong/files/FaurReveSample.xml;http://www.xenoage.com/temp/zong/files/MahlFaGe4Sample.xml;http://www.xenoage.com/temp/zong/files/MozartPianoSonata.xml;http://www.xenoage.com/temp/zong/files/MozartTrio.xml;http://www.xenoage.com/temp/zong/files/MozaVeilSample.xml;http://www.xenoage.com/temp/zong/files/SchbAvMaSample.xml;willnotbefound;zongviewer.jnlp;"/>
   <param name="filenames" value="Ludwig van Beethoven: An die ferne Geliebte;Echigo-Jishi;Gabriel Fauré: Après un rêve;Gustav Mahler: Die zwei blauen Augen;Wolfgang Amadeus Mozart: Piano Sonata;Wolfgang Amadeus Mozart: Trio;Wolfgang Amadeus Mozart: Das Veilchen;Franz Schubert: Ave Maria;Error example: Will not be found;Error example: No MusicXML;"/>
 	<!-- Java 1.6.0_10 or higher -->
